# drone

./: LICENSE  README.md
algorithms/: CMakeLists.txt  package.xml
algorithms/config/: locations.yaml
algorithms/launch/: a_star.launch.py  a_star_with_filter.launch.py  bidirectional_a_star.launch.py  bidirectional_a_star_with_filter.launch.py  dynamic_a_star.launch.py  rrt.launch.py
algorithms/rviz/: default.rviz
algorithms/src/: a_star.cpp  a_star_with_filter.cpp  bidirectional_a_star.cpp  bidirectional_a_star_with_filter.cpp  create_graph.cpp  dynamic_a_star.cpp  save_point_cloud.cpp  send_poses.cpp
autonomous_map/: CMakeLists.txt  package.xml
autonomous_map/config/: locations.yaml  visualize_a_star.rviz
autonomous_map/launch/: a_star.launch.py  a_star_with_filter.launch.py  autonomous.launch.py  bidirectional_a_star.launch.py  bidirectional_a_star_with_filter.launch.py  rrt.launch.py  visualize_a_star.launch.py  visualize_bidirectional_a_star.launch.py  visualize_obstacles_graph.launch.py
autonomous_map/rviz/: default.rviz  visualize_bidirectional_a_star.rviz
autonomous_map/src/: a_estrela.cpp  a_star.cpp  a_star_with_filter.cpp  bidirecional_a_star.cpp  bidirectional_a_star_with_filter.cpp  controller.cpp  create_graph.cpp  docking_node.cpp  navigable_graph.cpp  send_poses.cpp  visualize_a_star.cpp  visualize_obstacles_graph.cpp
bluerov2_fortress/: CMakeLists.txt  README.md  package.xml
bluerov2_fortress/config/: ros2_bridge.yaml  sim_left.ini  sim_right.ini  sub.parm
bluerov2_fortress/launch/: simulation.launch.py
bluerov2_fortress/models/bluerov2/: model.sdf
bluerov2_fortress/models/bluerov2_heavy/: model.sdf  model.sdf.in
bluerov2_fortress/models/corridor/: model.config  model.sdf
bluerov2_fortress/models/d435i/: model.sdf
bluerov2_fortress/models/house/: model.sdf
bluerov2_fortress/models/iris_d435i/: model.config
bluerov2_fortress/models/turtlebot3/: model.config  model.sdf
bluerov2_fortress/models/worlds/: model.config  model.sdf
bluerov2_fortress/msg/: Motion.msg
bluerov2_fortress/scripts/: ccw.sh  cw.sh  down.sh  forward.sh  left.sh  stop.sh  up.sh
bluerov2_fortress/src/: camera_info_publisher.cpp  camera_sync_publisher.cpp  teleop_keyboard.cpp
bluerov2_fortress/worlds/: bluerov2_heavy_underwater.world
gazebo/: CMakeLists.txt  package.xml
gazebo/configs/: ros2_bridge.yaml  sim.rviz
gazebo/description/: _d435i.gazebo copy.xacro  _d435i.gazebo.xacro  _d435i.urdf.xacro  camera.xacro  depth_camera.xacro  double_depth_camera.xacro  gazebo_control.xacro  imu.xacro  inertial_macros.xacro  robot.urdf.xacro  robot_core.xacro  sjtu_drone.urdf  sjtu_drone.urdf.xacro
gazebo/launch/: gazebo_garden.launch.py  launch_sim.launch.py  rtabmap.launch.py  sjtu_drone_bringup.launch.py  sjtu_drone_gazebo.launch.py
gazebo/map/: map.pgm  map.yaml
gazebo/models/fix_corridor/: model.config  model.sdf
gazebo/models/house/: model.config
gazebo/models/iris_d435i/: model.sdf
gazebo/models/turtlebot3_waffle/: model.sdf
gazebo/worlds/: my_house.world  terreno.world  turtlebot3_house.world
map/: CMakeLists.txt  package.xml
map/launch/: autonomous.launch.py
map/src/: a_estrela.cpp  create_graph.cpp  grafo  grafo.cu  verify_path.cpp
navigation_2d/: CMakeLists.txt  package.xml
navigation_2d/launch/: 2d_a_star_with_filter.launch.py  2d_bidirectional_a_star_with_filter.launch.py  rrt_with_filter.launch.py
navigation_2d/rviz/: default.rviz
navigation_2d/src/: 2d_a_star_with_filter.cpp  2d_bidirectional_a_star_with_filter.cpp  controller.cpp  create_graph.cpp  rrt_with_filter.cpp
plot_package/: package.xml  setup.cfg  setup.py
plot_package/plot_package/: plot_all_algorithms.py  plot_velocity_time_and_position.py
subdrone_interfaces/: CMakeLists.txt  package.xml
subdrone_interfaces/msg/: FixedVertices.msg  FixedVerticesArray.msg  PassarArestas.msg  PassarArrayArestas.msg  PassarArrayVertices.msg  PassarVertices.msg
visualize_and_plot_algorithms/: CMakeLists.txt  package.xml
visualize_and_plot_algorithms/launch/: plot_a_star.launch.py  plot_a_star_with_filter.launch.py  plot_all_algorithms.launch.py  plot_bidirectional_a_star.launch.py  plot_bidirectional_a_star_with_filter..launch.py  plot_bidirectional_a_star_with_filter.launch.py  visualize_a_star.launch.py  visualize_a_star_with_filter.launch.py  visualize_bidirectional_a_star.launch.py  visualize_bidirectional_a_star_with_filter.launch.py  visualize_obstacles_graph.launch.py
visualize_and_plot_algorithms/rviz/: visualize_a_star_with_filter.rviz  visualize_obstacles_graph.rviz
visualize_and_plot_algorithms/src/: plot_a_star.cpp  plot_a_star_with_filter.cpp  plot_bidirectional_a_star.cpp  plot_bidirectional_a_star_with_filter.cpp  visualize_a_star.cpp  visualize_a_star_with_filter.cpp  visualize_bidirectional_a_star.cpp  visualize_bidirectional_a_star_with_filter.cpp  visualize_obstacles_graph.cpp
yolo_ros/: requirements.txt
yolo_ros/yolo_bringup/launch/: yolo.launch.py  yolov12.launch.py  yolov8.launch.py
yolo_ros/yolo_msgs/msg/: Detection.msg
yolo_ros/yolo_ros/yolo_ros/: detect_3d_node.py
