<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation_2d</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="momesso@todo.todo">momesso</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>subdrone_interfaces</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
    <depend>visualization_msgs</depend>
  <build_depend>OpenGL</build_depend>
  <build_depend>GLEW</build_depend>
  <build_depend>GLUT</build_depend>
  <build_depend>PCL</build_depend>
  
  <exec_depend>OpenGL</exec_depend>
  <exec_depend>GLEW</exec_depend>
  <exec_depend>GLUT</exec_depend>
  <exec_depend>PCL</exec_depend>

  
  <depend>yolo_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_common</depend>
  <depend>pcl_io</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
